# libretorio-scanner

./: .dockerignore  .env-docker  .eslintrc.js  .gitignore  Dockerfile  copyStaticAssets.ts  jest.config.js  migrate_covers.sh  package-lock.json  package.json  readme.md  tsconfig.json
native/worker/: CMakeLists.txt
native/worker/ace-helper/: CMakeLists.txt
native/worker/ace-helper/include/: helper_archive_utils.h
native/worker/ace-helper/src/: helper_archive_utils.cpp
native/worker/ace-helper/src/app/: main.cpp
native/worker/include/: archive_backend.h  archive_entry_utils.h  image_pipeline.h  libarchive_base.h  unrar_compat.h
native/worker/scripts/: build.sh
native/worker/src/app/: main.cpp
native/worker/src/archive/: ace_backend.cpp  archive_entry_utils.cpp  libarchive_base.cpp  rar_backend.cpp  sevenz_backend.cpp  tar_backend.cpp  zip_backend.cpp
native/worker/src/image/: image_pipeline.cpp
scripts/: review-cache-failures.mjs
src/: WSServer.ts  app.ts  server.ts
src/config/: configuration.ts
src/controllers/: home.ts
src/db/: PostgresAdapter.ts  RedisAdapter.ts
src/helpers/: FileUtils.ts
src/models/interfaces/: CacheArtifactSnapshot.ts  ComicCacheBuildResult.ts  ComicCacheState.ts  Directory.ts  EligibleComicSource.ts  File.ts  ScanResult.ts  ScanRoot.ts  ScanRootResult.ts
src/repositories/: CacheArtifactStateRepository.ts  FileRepository.ts  ScanRootRepository.ts
src/services/: BooksService.ts  BooksStore.ts  CacheArtifactSnapshotService.ts  CalibreService.ts  ComicCacheStateService.ts  ComicChunkCacheService.ts  FileWatcher.ts  FileWatcherConsumer.ts  NativeComicCacheWorkerService.ts  OpenLibraryService.ts  RedisCache.ts  RedisCacheService.ts  RedisQueue.ts  Scanner.ts  ScannerCache.ts  ScannerCacheService.ts  ScannerService.ts  SpecialDirectoryArtifactService.ts  book-info.ts  bookServices.ts  calibre-info.ts  dbService.ts  logService.ts
src/utils/: archiveDetectionUtils.ts  comicCacheUtils.ts  fileUtils.ts  imageUtils.ts  naturalSortUtils.ts
tests/: CacheArtifactSnapshotService.test.ts  ComicChunkCacheResize.integration.test.ts  ComicChunkCacheService.test.ts  NativeComicCacheWorkerResize.integration.test.ts  NativeComicCacheWorkerService.test.ts  ScannerService.test.ts  SpecialDirectoryArtifactService.test.ts  archiveDetectionUtils.test.ts  comicCacheUtils.test.ts
